--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="resources/js/arrayUtils.js"></script>
 
     <!-- additional JS scripts -->
-    <script type="text/javascript" src="https://unpkg.com/d3@5.16.0/dist/d3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.4.4/d3.min.js"></script>
     <script type="text/javascript" src="resources/js/initD3Graph.js"></script>
 	
     <script type="text/javascript" src="resources/js/buildBigramLinks.js"></script>
